--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,13 @@ a {
     font-weight: bold;
 }
 
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    margin: 3rem 0;
+}
+
 .app {
     display: flex;
     flex-direction: column;
