--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 a {
   text-decoration: none;
   color: #108db8;
@@ -11,28 +17,15 @@ hr {
   margin: 3rem 0;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 .app {
   display: flex;
-  flex-direction: column;
-  padding: 2rem;
-  align-items: center;
-}
-
-.content {
-  width: 100%;
-  max-width: 600px;
 }
 
 .logo {
-  align-self: flex-start;
+  margin: 2rem;
 }
 
-.logo-icon {
-  width: 4rem
+.content {
+  padding: 1rem;
+  max-width: 600px;
 }
